--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
       <artifactId>jnr-unixsocket</artifactId>
       <version>${jnr-unixsocket.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.reactivex.rxjava2</groupId>
+      <artifactId>rxjava</artifactId>
+      <version>2.0.1</version>
+    </dependency>
     <!-- Testing Dependencies -->
     <dependency>
       <groupId>junit</groupId>
