--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
       <artifactId>rxjava</artifactId>
       <version>2.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.reactivestreams</groupId>
+      <artifactId>reactive-streams</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+
     <!-- Testing Dependencies -->
     <dependency>
       <groupId>junit</groupId>
