--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <java.level>8</java.level>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <okhttp.version>3.5.0</okhttp.version>
-    <jackson.version>2.8.5</jackson.version>
+    <jackson2.version>2.8.5</jackson2.version>
     <junit.version>4.12</junit.version>
     <slf4j.version>1.7.13</slf4j.version>
     <jnr-unixsocket.version>0.15</jnr-unixsocket.version>
@@ -58,12 +58,17 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>${jackson.version}</version>
+      <version>${jackson2.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>${jackson.version}</version>
+      <version>${jackson2.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>${jackson2.version}</version>
     </dependency>
     <dependency>
       <groupId>com.github.jnr</groupId>
